# model_based_diagnosis

./: .gitignore  .gitlab-ci.yml  README.txt
base/: CMakeLists.txt  package.xml  setup.py
base/scripts/: base.py
ci/: clone_required_repos.sh  setup_ws.sh
model_based_diagnosis/: CMakeLists.txt  package.xml
test1/: CMakeLists.txt  package.xml  setup.py
test1/scripts/: testscript.py
test_sub_pkg/: CMakeLists.txt  package.xml
test_sub_pkg/scripts/: sub_test.py
test_sub_pkg/src/: topic_gen_sub.cpp  topic_pub.cpp  topic_sub.cpp
tug_diagnosis/tug_diagnosis/: CMakeLists.txt  package.xml
tug_diagnosis/tug_diagnosis_msgs/: CMakeLists.txt  package.xml
tug_examination/tug_reporter/: CMakeLists.txt  package.xml
tug_ist_diagnosis_board/: CMakeLists.txt  manifest.xml.backup  package.xml
tug_ist_diagnosis_board/src/: Board.cpp  CClientTCP.cpp  CClientTCP1.cpp  CClientTCP2.cpp  Client.cpp  Client.h  ClientMain.cpp  Controller.cpp  NodeActionServer.cpp  RPY.cpp  listener__class.cpp  main.cpp  main2.cpp
tug_ist_diagnosis_engine/: CMakeLists.txt  manifest.xml  package.xml
tug_ist_diagnosis_engine/src/: diagnosis_engine_controller.cpp
tug_ist_diagnosis_generator/: CMakeLists.txt  aio.txt  battery_state.txt  c1.txt  clock.txt  cmd_vel.txt  diagnostics.txt  dio.txt  gmapping_entropy.txt  gripper_state.txt  gyro_imu.txt  imu_data.txt  joy.txt  mainpage.dox  manifest.xml  manifest.xml.backup  map.txt  map_metadata.txt  motor_state.txt  package.xml  pitch_imu.txt  pitch_odom.txt  pose.txt  ptz_state.txt  roll_imu.txt  roll_odom.txt  rosout.txt  rosout_agg.txt  safdarFile  scan.txt  sonar.txt  tf.txt  yaw_imu.txt  yaw_odom.txt
tug_ist_diagnosis_generator/matlab/: curr_time.mat  curr_timeNoMapping.mat  curr_timeNoRPY.mat  curr_timeTrainNs.mat  model_mat.mat  model_matFinal.mat  model_matTest.mat
tug_ist_diagnosis_generator/src/: RPY.py  extracting_basic_datatypes_quaternion.py  file.rtp  gyro_imu.txt  imu_data.txt  kalman_example.py  observers_model_generator.py  observers_model_generatorB.py  observers_model_generatorB1.py  observers_model_generatorNew.py  observers_model_generatorNew1.py  observers_model_generatorVIRT.py  pitch_imu.txt  print.py  roll_imu.txt  rostopic_list-v.py  system_table.py  test_func.py  textCtrC.py  topicOccurances.py  topicOccurancesB.py  yaw_imu.txt
tug_ist_diagnosis_launch/: CMakeLists.txt  aria1.launch  laser1.launch  manifest.xml.backup  package.xml
tug_ist_diagnosis_launch/launch/: DXObservers.launch  DXObserversHalf.launch  DXObserversNodes.launch  Lab1Observers.launch  QObs.launch  Server.launch  TopicsData  action_servers.launch  aria.launch  board_controller.launch  diagnosis_engine.launch  diagnosis_engine_controller.launch  diagnosis_model.launch  diagnosis_repair.launch  hector_mapping.launch  imu_node.launch  laser.launch  laser_alignment_control.launch  laser_alignment_node.launch  laser_node.launch  obs1.launch  obs2.launch  obs3.launch  obs4.launch  obs5.launch  obs6.launch  obs7.launch  obs8.launch  obs9.launch  obs_Review.launch  obs_ReviewA1.launch  obs_ReviewA11.launch  obs_ReviewA1G.launch  obs_ReviewA1NP.launch  obs_ReviewA1Screen.launch  obs_ReviewA2.launch  obs_ReviewA3.launch  obs_ReviewA31.launch  obs_auto.launch  obs_auto1.launch  (+25 more)
tug_ist_diagnosis_launch/scripts/: inject_faults.sh
tug_ist_diagnosis_model/: CMakeLists.txt  DXdiagnosis_model.yaml  diagnosis_model.yaml  diagnosis_model1.yaml  diagnosis_model2.yaml  diagnosis_model3.yaml  diagnosis_model4.yaml  diagnosis_model5.yaml  diagnosis_model6.yaml  diagnosis_model7.yaml  diagnosis_model8.yaml  diagnosis_modelA.yaml  diagnosis_modelB.yaml  diagnosis_modelC.yaml  diagnosis_modelCorrect.yaml  diagnosis_modelDX.yaml  diagnosis_modelFinal.yaml  diagnosis_modelFinalRound.yaml  diagnosis_modelLab2.yaml  diagnosis_modelLab3.yaml  diagnosis_modelN.yaml  diagnosis_modelNewMem.yaml  diagnosis_modelReview.yaml  diagnosis_modelReviewA1.yaml  diagnosis_modelReviewA2.yaml  diagnosis_modelRound1.yaml  diagnosis_model_pioneer.yaml  diagnosis_model_test.yaml  manifest.xml.backup  package.xml
tug_ist_diagnosis_model/src/: diagnosis_model_server.py
tug_ist_diagnosis_msgs/: CMakeLists.txt  manifest.xml  package.xml
tug_ist_diagnosis_msgs/msg/: DiagnosisRepairAction.msg  DiagnosisRepairActionFeedback.msg  DiagnosisRepairActionGoal.msg  DiagnosisRepairActionResult.msg  DiagnosisRepairGoal.msg
tug_ist_diagnosis_msgs/src/tug_ist_diagnosis_msgs/msg/: _BoardAction.py  _BoardActionFeedback.py  _BoardActionGoal.py  _BoardActionResult.py  _BoardFeedback.py  _BoardGoal.py  _BoardResult.py  _Channel.py  _DBoardMeasurments.py  _Diagnosis.py  _DiagnosisRepairAction.py  _DiagnosisRepairActionFeedback.py  _DiagnosisRepairActionGoal.py  _DiagnosisRepairActionResult.py  _DiagnosisRepairFeedback.py  _DiagnosisRepairGoal.py  _DiagnosisRepairResult.py  _DiagnosisResults.py  _Observations.py  _SystemDescription.py  _SystemModelAction.py  _SystemModelActionFeedback.py  _SystemModelActionGoal.py  _SystemModelActionResult.py  _SystemModelFeedback.py  _SystemModelGoal.py  _SystemModelResult.py  __init__.py
tug_ist_diagnosis_observers/: CMakeLists.txt  manifest.xml  package.xml
tug_ist_diagnosis_observers/src/: BiQObs.py  BiQObsB.py  DObs.py  GObs.py  GObs1.py  GObsB.py  HObs.py  MObs.py  NObs.py  PObs.py  PObs1.py  QObs.py  aria.py  correlation.py  laser.py  laser_node.py  temp.py  testNode.py
tug_ist_diagnosis_repair/: CMakeLists.txt  CMakeLists.txt.backup  manifest.xml  package.xml  repair_domain.pddl
tug_ist_diagnosis_repair/java/classes/: repair_problem.pddl
tug_ist_diagnosis_repair/src/: diagnosis_repair.cpp
tug_observers/: CMakeLists.txt  package.xml
tug_observers/plugin_manager_test/: CMakeLists.txt  package.xml
tug_observers/tug_observer_plugins_cpp/: CMakeLists.txt  package.xml  resource_plugin.xml
tug_observers/tug_observer_plugins_python/: CMakeLists.txt  package.xml
tug_observers/tug_observers/: CMakeLists.txt  package.xml
tug_observers/tug_observers_cpp/: CMakeLists.txt  package.xml
tug_resource_monitor/: CMakeLists.txt  package.xml
(+455 files in other folders)
