<package>
  <name>model_based_diagnosis</name>
  <version>0.1.0</version>
  <description>model_based_diagnosis</description>
  <maintainer email="">Safdar Zaman</maintainer>
  <maintainer email="">Gerald Steinbauer</maintainer>

  <license>GPLv3</license>

  <url type="website">http://ros.org/wiki/tug_ist_model_based_diagnosis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Safdar Zaman</author>
  <author>Gerald Steinbauer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>tug_ist_diagnosis_repair</run_depend>
  <run_depend>tug_ist_diagnosis_msgs</run_depend>
  <run_depend>tug_ist_diagnosis_engine</run_depend>
  <run_depend>tug_ist_diagnosis_board</run_depend>
  <run_depend>tug_ist_diagnosis_launch</run_depend>
  <run_depend>tug_ist_diagnosis_model</run_depend>
  <run_depend>tug_ist_diagnosis_observers</run_depend>
  <run_depend>tug_ist_diagnosis_generator</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
