<package>
  <name>tug_ist_diagnosis_engine</name>
  <version>0.1.0</version>
  <description>This package provides a diagnosis engine. It is infact a model based diagnosis engine meaning it uses model of correct behavior of the robot system and current observations to compute diagnosis. It takes model from model server and observations from the observers to provide diagnosis.</description>
  <maintainer email="">Safdar Zaman</maintainer>
  <maintainer email="">Gerald Steinbauer</maintainer>

  <license>GPLv3</license>

  <url type="website">http://ros.org/wiki/tug_ist_diagnosis_engine</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Safdar Zaman</author>
  <author>Gerald Steinbauer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tug_ist_diagnosis_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tug_ist_diagnosis_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tug_ist_diagnosis_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>