<package>
  <name>tug_ist_diagnosis_generator</name>
  <version>0.1.0</version>
  <description>Diagnosis Model System needs diagnois model of the correct behavior of the system. Diagnosis generator generates this diagnosis model automatically by continously observing and extracting parmaters from the system run. It takes the running system, extracts running nodes, extracts existing topics and their related information. It calculates frequencies of the topics, memory and cpu usage for each node. On the basis of acquired information, it generates diagnosis model, and list of observers for model based diagnosis system.</description>
  <maintainer email="">Safdar Zaman</maintainer>
  <maintainer email="">Gerald Steinbauer</maintainer>

  <license>GPLv3</license>

  <url type="website">http://ros.org/wiki/tug_ist_diagnosis_generator</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Safdar Zaman</author>
  <author>Gerald Steinbauer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>