<package>
  <name>tug_ist_diagnosis_launch</name>
  <version>0.1.0</version>
  <description>This package includes all launch files necessary for starting or testing the current model based diagnosis system.</description>
  <maintainer email="">Safdar Zaman</maintainer>
  <maintainer email="">Gerald Steinbauer</maintainer>

  <license>GPLv3</license>

  <url type="website">http://ros.org/wiki/tug_ist_diagnosis_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Safdar Zaman</author>
  <author>Gerald Steinbauer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>