<package>
  <name>tug_ist_diagnosis_observers</name>
  <version>0.1.0</version>
  <description>
    This package provides a set of observers like DOBs, GObs, NObs, QObs, BiQObs, MObs, PObs and HObs.
    An observer is a software entity acting like a ROS node that observers a particular property of the
    system or part of the system. Observation is a First Order Logic (FOL) sentence.
  </description>
  <maintainer email="jsanto@ist.tugraz.at">Jorge Santos Simón</maintainer>

  <license>GPLv3</license>

  <url type="website">http://ros.org/wiki/tug_ist_diagnosis_observers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Safdar Zaman</author>
  <author>Gerald Steinbauer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tug_ist_diagnosis_msgs</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tug_ist_diagnosis_msgs</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>rosgraph</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>tug_ist_diagnosis_msgs</test_depend> -->
  <!-- <test_depend>rostopic</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->

</package>