<package>
  <name>tug_ist_diagnosis_repair</name>
  <version>0.1.0</version>
  <description>This package provides planner based repair action server. It uses Planning Domain Definition Language (PDDL) based planner that makes a plan for the action by using a domain and problem file. Repair Engine gets diagnosis from diagnosis engine and observations from observers and generates a problem file for the planner. Planner using domain and problem files, generates a set of action plans. Based on action plans repair engine invokes appropriate action server to stop/start a software node or shut-down/power-up a hardware device.</description>
  <maintainer email="">Safdar Zaman</maintainer>

  <license>GPLv3</license>

  <url type="website">http://ros.org/wiki/tug_ist_diagnosis_repair</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Safdar Zaman</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tug_ist_diagnosis_msgs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tug_ist_diagnosis_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tug_ist_diagnosis_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>